# Vibe-Research

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/vibe_research/: __init__.py  agents.py  backends.py  cli.py  config.py  domains.py  enrich.py  export.py  memory.py  pipeline.py  reports.py  schemas.py  tui.py  visuals.py
tests/: test_core.py
